--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,11 +9,19 @@
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
 <body>
-  <header class="header">
-    <h1 class="header__title">skilled</h1>
-    <button class="header__button">Get started</button>
+  <header>
+    <div class="navbar">
+      <h1 class="navbar__title">skilled</h1>
+      <button class="navbar__button">Get started</button>
+    </div>
   </header>
-  <main></main>
+  <main>
+    <div class="presentation">
+      <h2 class="presentation__title">Maximize skill, minimize budget</h2>
+      <p class="presentation__text">Our modern courses across a range of in-demand skills will give you the 
+        knowledge you need to live the life you want.</p>
+    </div>
+  </main>
   <footer></footer>
 
   <!-- Get Started
