--- a/index.html
+++ b/index.html
@@ -9,78 +9,82 @@
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
 <body>
-  <header>
-    <div class="navbar">
-      <h1 class="navbar__title">skilled</h1>
-      <a href="#" class="btn btn--dark">Get started</a>
-    </div>
-  </header>
-  <main>
-    <div class="presentation-container">
-      <div class="presentation">
-        <h2 class="presentation__title">Maximize skill, minimize budget</h2>
-        <p class="presentation__text">Our modern courses across a range of in-demand skills will give you the 
-          knowledge you need to live the life you want.</p>
-        <a href="#" class="btn btn--primary">Get started</a>
+  <div class="content">
+    <header>
+      <div class="navbar">
+        <h1 class="navbar__title">skilled</h1>
+        <a href="#" class="btn btn--dark">Get started</a>
       </div>
-      <div class="main-photo">
-        <picture class="main-photo__picture">
-          <source media="(max-width: 600px)" srcset="./assets/image-hero-mobile.png">
-          <img src="./assets/image-hero-desktop.png" alt="Maximize skill, minimize budget">
-        </picture>
-      </div>
-    </div>
-    <div class="cards-container">
-      <div class="card card--title">
-        <h2>Check out our most popular courses!</h2>
-      </div>
-      <div class="card card--text">
-        <div class="card__circle">
-          <img src="./assets/icon-animation.svg" alt="Animation">
+    </header>
+    <main>
+      <div class="presentation-container">
+        <div class="presentation">
+          <h2 class="presentation__title">Maximize skill, minimize budget</h2>
+          <p class="presentation__text">Our modern courses across a range of in-demand skills will give you the 
+            knowledge you need to live the life you want.</p>
+          <a href="#" class="btn btn--primary">Get started</a>
         </div>
-        <h3>Animation</h3>
-        <p>Learn the latest animation techniques to create stunning motion 
-          design and captivate your audience.</p>
-        <a href="#">Get Started</a>
-      </div>
-      <div class="card card--text">
-        <div class="card__circle">
-          <img src="./assets/icon-design.svg" alt="Design">
+        <div class="main-photo">
+          <picture class="main-photo__picture">
+            <source media="(max-width: 600px)" srcset="./assets/image-hero-mobile.png 1x, ./assets/image-hero-mobile@2x.png 2x">
+            <source media="(max-width: 1190px)" srcset="./assets/image-hero-tablet.png 1x, ./assets/image-hero-tablet@2x.png 2x">
+            <img srcset="./assets/image-hero-desktop.png 1x, ./assets/image-hero-desktop@2x.png 2x" src="./assets/image-hero-desktop.png" alt="Maximize skill, minimize budget">
+          </picture>
         </div>
-        <h3>Design</h3>
-        <p>Create beautiful, usable interfaces to help shape the future of 
-          how the web looks.</p>
-        <a href="#">Get Started</a>
       </div>
-      <div class="card card--text">
-        <div class="card__circle">
-          <img src="./assets/icon-photography.svg" alt="Photography">
+      <div class="cards-container">
+        <div class="card card--title">
+          <h2>Check out our most popular courses!</h2>
         </div>
-        <h3>Photography</h3>
-        <p>Explore critical fundamentals like lighting, composition, and focus 
-          to capture exceptional photos.</p>
-        <a href="#">Get Started</a>
-      </div>
-      <div class="card card--text">
-        <div class="card__circle">
-          <img src="./assets/icon-crypto.svg" alt="Crypto">
+        <div class="card card--text">
+          <div class="card__circle">
+            <img src="./assets/icon-animation.svg" alt="Animation">
+          </div>
+          <h3>Animation</h3>
+          <p>Learn the latest animation techniques to create stunning motion 
+            design and captivate your audience.</p>
+          <a href="#">Get Started</a>
         </div>
-        <h3>Crypto</h3>
-        <p>All you need to know to get started investing in crypto. Go from beginner 
-          to advanced with this 54 hour course.</p>
-        <a href="#">Get Started</a>
-      </div>
-      <div class="card card--text">
-        <div class="card__circle">
-          <img src="./assets/icon-business.svg" alt="Business">
+        <div class="card card--text">
+          <div class="card__circle">
+            <img src="./assets/icon-design.svg" alt="Design">
+          </div>
+          <h3>Design</h3>
+          <p>Create beautiful, usable interfaces to help shape the future of 
+            how the web looks.</p>
+          <a href="#">Get Started</a>
         </div>
-        <h3>Business</h3>
-        <p>A step-by-step playbook to help you start, scale, and sustain your business 
-          without outside investment.</p>
-        <a href="#">Get Started</a>
+        <div class="card card--text">
+          <div class="card__circle">
+            <img src="./assets/icon-photography.svg" alt="Photography">
+          </div>
+          <h3>Photography</h3>
+          <p>Explore critical fundamentals like lighting, composition, and focus 
+            to capture exceptional photos.</p>
+          <a href="#">Get Started</a>
+        </div>
+        <div class="card card--text">
+          <div class="card__circle">
+            <img src="./assets/icon-crypto.svg" alt="Crypto">
+          </div>
+          <h3>Crypto</h3>
+          <p>All you need to know to get started investing in crypto. Go from beginner 
+            to advanced with this 54 hour course.</p>
+          <a href="#">Get Started</a>
+        </div>
+        <div class="card card--text">
+          <div class="card__circle">
+            <img src="./assets/icon-business.svg" alt="Business">
+          </div>
+          <h3>Business</h3>
+          <p>A step-by-step playbook to help you start, scale, and sustain your business 
+            without outside investment.</p>
+          <a href="#">Get Started</a>
+        </div>
       </div>
-    </div>
-  </main>
+    </main>
+  </div>
+  
   <footer>
     <div class="footer">
       <h1>skilled</h1>
